Improves compatibility with older versions of Android
- Replaced the use of StandardCharsets.UTF_8 with the string "UTF-8"